Fix sidebar text collapse

--- a/web/src/home/sidebar/Sidebar.scss
+++ b/web/src/home/sidebar/Sidebar.scss
@@ -14,6 +14,11 @@
     align-items: center;
     justify-content: space-between;
 
+    .text {
+      text-wrap: nowrap;
+      text-overflow: ellipsis;
+    }
+
     .action-dropdown {
       display: none;
     }
